[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Yuval Saraf <unimonkiez@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
set = "src.set:set"
get = "src.get:get"
add = "src.add:add"
read = "src.read:read"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
